elbow method demo added, minor clustering demos rearrangement

--- a/demos/DTW Kmeans Inertia Demo.ipynb
+++ b/demos/DTW Kmeans Inertia Demo.ipynb
@@ -75,9 +75,11 @@
    "outputs": [],
    "source": [
     "# import helper functions for dataset generation\n",
-    "from ts_gen import make_binary_code_dataset,make_flat_dataset,make_slopes_dataset,lists_of_series_are_equal\n",
+    "from ts_gen import make_binary_code_dataset,make_flat_dataset,make_slopes_dataset\n",
     "# import helper functions for dataset visualization\n",
-    "from ts_viz import plot_list_of_ts,plot_list_of_ts_over_subplots"
+    "from ts_viz import plot_list_of_ts,plot_list_of_ts_over_subplots\n",
+    "# import helper functions to adjust list of series according to output of the clustering\n",
+    "from ts_utils import get_clustered_list"
    ]
   },
   {
@@ -94,28 +96,33 @@
    "execution_count": 5,
    "id": "successful-drawing",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function get_clustered_list in module ts_utils:\n",
+      "\n",
+      "get_clustered_list(list_of_series, clusters_dict)\n",
+      "    Return a list of pandas series with series names adjusted according to the given clusters dictionary\n",
+      "    \n",
+      "    Arguments:\n",
+      "    \n",
+      "    list_of_series : list of Pandas Series. the name of the series is irrelevent\n",
+      "    \n",
+      "    clusters_dict : dictiorary associating clusters and series indexes in the input list\n",
+      "        example:  {0: [6, 7, 8], 1: [0, 1, 2], 2: [3, 4, 5]}\n",
+      "        means: cluster 0 is composed by series 6,7,8\n",
+      "               cluster 1 is composed by series 0,1,2\n",
+      "               cluster 2 is composed by series 3,4,5\n",
+      "    \n",
+      "    Returns:  copy of the list of series with names matching the clusters_dict\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "def get_clustered_list(list_of_series,clusters_dict):\n",
-    "    \"\"\"Return a list of pandas series with series names adjusted according to the given clusters dictionary\n",
-    "    \n",
-    "    Arguments:\n",
-    " \n",
-    "    list_of_series : list of Pandas Series. the name of the series is irrelevent\n",
-    "\n",
-    "    clusters_dict : dictiorary associating clusters and series indexes in the input list\n",
-    "        example:  {0: [6, 7, 8], 1: [0, 1, 2], 2: [3, 4, 5]}\n",
-    "        means: cluster 0 is composed by series 6,7,8\n",
-    "               cluster 1 is composed by series 0,1,2\n",
-    "               cluster 2 is composed by series 3,4,5\n",
-    "\n",
-    "    Returns:  copy of the list of series with names matching the clusters_dict\n",
-    "    \"\"\"\n",
-    "    new_list = list_of_series.copy()\n",
-    "    for k in clusters_dict.keys():\n",
-    "        for i in clusters_dict[k]:\n",
-    "            new_list[i].name = k\n",
-    "    return new_list"
+    "help(get_clustered_list)"
    ]
   },
   {
@@ -251,16 +258,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 10.20it/s]\n",
-      " 50%|█████████████████████████████████████████▌                                         | 5/10 [00:00<00:00,  8.00it/s]\n",
-      " 60%|█████████████████████████████████████████████████▊                                 | 6/10 [00:00<00:00,  9.58it/s]\n",
-      " 70%|██████████████████████████████████████████████████████████                         | 7/10 [00:00<00:00,  7.95it/s]\n",
-      " 60%|█████████████████████████████████████████████████▊                                 | 6/10 [00:00<00:00,  9.33it/s]\n",
-      " 70%|██████████████████████████████████████████████████████████                         | 7/10 [00:00<00:00,  9.87it/s]\n",
-      " 60%|█████████████████████████████████████████████████▊                                 | 6/10 [00:00<00:00,  9.92it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 13.66it/s]\n",
-      " 70%|██████████████████████████████████████████████████████████                         | 7/10 [00:00<00:00, 11.15it/s]\n",
-      " 60%|█████████████████████████████████████████████████▊                                 | 6/10 [00:00<00:00, 11.19it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 16.13it/s]\n",
+      " 50%|█████████████████████████████████████████▌                                         | 5/10 [00:00<00:00, 15.34it/s]\n",
+      " 60%|█████████████████████████████████████████████████▊                                 | 6/10 [00:00<00:00, 14.74it/s]\n",
+      " 70%|██████████████████████████████████████████████████████████                         | 7/10 [00:00<00:00, 14.99it/s]\n",
+      " 60%|█████████████████████████████████████████████████▊                                 | 6/10 [00:00<00:00, 14.89it/s]\n",
+      " 70%|██████████████████████████████████████████████████████████                         | 7/10 [00:00<00:00, 15.05it/s]\n",
+      " 60%|█████████████████████████████████████████████████▊                                 | 6/10 [00:00<00:00, 14.42it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 17.27it/s]\n",
+      " 70%|██████████████████████████████████████████████████████████                         | 7/10 [00:00<00:00, 15.42it/s]\n",
+      " 60%|█████████████████████████████████████████████████▊                                 | 6/10 [00:00<00:00, 15.19it/s]\n"
      ]
     }
    ],
@@ -495,7 +502,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|█████████████████████████████████████████████████▊                                 | 6/10 [00:00<00:00, 11.45it/s]"
+      " 60%|█████████████████████████████████████████████████▊                                 | 6/10 [00:00<00:00,  9.26it/s]"
      ]
     },
     {
@@ -544,8 +551,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|█████████████████████████████████████████████████▊                                 | 6/10 [00:00<00:00, 10.83it/s]\n",
-      " 70%|██████████████████████████████████████████████████████████                         | 7/10 [00:00<00:00, 11.84it/s]"
+      " 60%|█████████████████████████████████████████████████▊                                 | 6/10 [00:00<00:00, 11.01it/s]\n",
+      " 70%|██████████████████████████████████████████████████████████                         | 7/10 [00:00<00:00,  9.20it/s]"
      ]
     },
     {
