--- a/demos/experiments for generator.ipynb
+++ b/demos/experiments for generator.ipynb
@@ -11,10 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "gorgeous-blackberry",
+   "execution_count": 319,
+   "id": "horizontal-anger",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# automatically reaload libraries (useful when working on libraries while playing with the notebook)\n",
     "%load_ext autoreload\n",
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 320,
    "id": "suspected-night",
    "metadata": {},
    "outputs": [],
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 321,
    "id": "difficult-latin",
    "metadata": {},
    "outputs": [],
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 322,
    "id": "instrumental-palestinian",
    "metadata": {},
    "outputs": [],
@@ -71,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "statewide-psychology",
+   "execution_count": 323,
+   "id": "parliamentary-hollow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "virgin-accountability",
+   "id": "governmental-illinois",
    "metadata": {},
    "source": [
     "\n",
@@ -213,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "protecting-large",
+   "id": "julian-commissioner",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "binary-former",
+   "id": "described-today",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "united-covering",
+   "id": "cultural-programming",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "emerging-humanity",
+   "id": "positive-southwest",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "banned-gather",
+   "id": "distinct-ivory",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "excess-twelve",
+   "id": "sacred-marine",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -346,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "identified-laugh",
+   "id": "everyday-installation",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -365,20 +374,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
-   "id": "wound-floating",
+   "execution_count": 1,
+   "id": "inappropriate-aruba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "random.seed(1)\n",
-    "m = ARMA(c=1,sigma=1,pcoeff=[1,-1,0.5],qcoeff=[1,2,-1],x_buff=[-4,-6,8],e_buff=[2,1,-1])\n",
-    "x = m.generate(10)\n"
+    "from generator import AR,MA,ARMA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "given-screen",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[] 1.0\n",
+      "[(1, 1.0)] 2.0\n",
+      "[(1, 2.0), (-1, 1.0)] 2.0\n",
+      "[(1, 2.0), (-1, 2.0)] 1.0\n",
+      "[(1, 1.0), (-1, 2.0)] 0.0\n",
+      "[(1, 0.0), (-1, 1.0)] 0.0\n",
+      "[(1, 0.0), (-1, 0.0)] 1.0\n",
+      "[(1, 1.0), (-1, 0.0)] 2.0\n",
+      "[(1, 2.0), (-1, 1.0)] 2.0\n",
+      "[(1, 2.0), (-1, 2.0)] 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = AR(c=1,sigma=0,coeff=[1,-1])\n",
+    "x = m.generate(10)\n",
+    "assert x == [1.0, 2.0, 2.0, 1.0, 0.0, 0.0, 1.0, 2.0, 2.0, 1.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "verified-maine",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(-1, 0), (1, 0)] 1.0\n",
+      "[(-1, 0), (1, 1.0)] 2.0\n",
+      "[(-1, 1.0), (1, 2.0)] 2.0\n",
+      "[(-1, 2.0), (1, 2.0)] 1.0\n",
+      "[(-1, 2.0), (1, 1.0)] 0.0\n",
+      "[(-1, 1.0), (1, 0.0)] 0.0\n",
+      "[(-1, 0.0), (1, 0.0)] 1.0\n",
+      "[(-1, 0.0), (1, 1.0)] 2.0\n",
+      "[(-1, 1.0), (1, 2.0)] 2.0\n",
+      "[(-1, 2.0), (1, 2.0)] 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = AR(c=1,sigma=0,coeff=[1,-1])\n",
+    "x = m.generate(10)\n",
+    "assert x == [1.0, 2.0, 2.0, 1.0, 0.0, 0.0, 1.0, 2.0, 2.0, 1.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "polyphonic-kitchen",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "developed-extraction",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "deque([0, 1, 3, 4])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deque([0,0,0,0,0]+[1,3,4],maxlen=4)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rough-grammar",
+   "id": "broadband-distributor",
    "metadata": {},
    "outputs": [],
    "source": []
