added demos SAX Encoding

--- a/demos/SAXEncoding_AnomalyDetection_Demo.ipynb
+++ b/demos/SAXEncoding_AnomalyDetection_Demo.ipynb
@@ -6,7 +6,8 @@
     "id": "m1Y5Zt6a11QP"
    },
    "source": [
-    "# Symbolic Aggregate approXimation *(SAX)* Encoding"
+    "# Symbolic Aggregate approXimation *(SAX)* Encoding\n",
+    "## Anomaly Detection DEMO"
    ]
   },
   {
@@ -460,7 +461,14 @@
    "source": [
     "## Dimensionality Reduction with **Piecewise Aggregate Approximation**\n",
     "\n",
-    "The **Piecewise Aggregate Approximation** is a sequence of labels, like 'AAA' in this case."
+    "The **Piecewise Aggregate Approximation** consisting in taking the mean over back-to-back points. This decreases the number of points and reduces noise while preserving the trend of the time series.\n",
+    "The labels for each level form the **SAX String** (like *'AAA'*)\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "![PAA](https://www.researchgate.net/profile/Bill-Chiu-2/publication/221653289/figure/fig7/AS:668838362349575@1536474900462/Symbolic-aggregate-approximation-of-a-time-series-as-the-four-letter-word-dbad-The.ppm)\n",
+    "\n",
+    "<br>"
    ]
   },
   {
